Update GitHub Actions workflow for frontend deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
-name: Deploy index.html to S3
+name: Deploy Frontend to S3
 
 on:
   push:
     branches:
       - main
     paths:
-      - "index.html"
+      - "frontend/**"
 
 permissions:
   id-token: write
@@ -16,15 +16,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials using OIDC
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::858986859216:role/userfeedback
           aws-region: ap-south-1
 
-      - name: Upload index.html to S3
+      - name: Upload frontend to S3
         run: |
-          aws s3 cp index.html s3://${{ secrets.S3_BUCKET_NAME }}/index.html
+          aws s3 cp frontend s3://${{ secrets.S3_BUCKET_NAME }}/frontend
